--- a/pub/views/client.html
+++ b/pub/views/client.html
@@ -1,3 +1,4 @@
 <script src="js/three.min.js"></script>
 <script src="js/jquery-2.0.3.min.js"></script>
 <script src="js/client.js"></script>
+<title> u want sum gam?</title>
