using backbone and underscore for object organization

--- a/pub/views/client.html
+++ b/pub/views/client.html
@@ -1,4 +1,6 @@
 <script src="js/three.min.js"></script>
+<script src="js/underscore-min.js"></script>
+<script src="js/backbone-min.js"></script>
 <script src="js/jquery-2.0.3.min.js"></script>
 <script src="js/client.js"></script>
 <title> u want sum gam?</title>
