--- a/pub/views/client.html
+++ b/pub/views/client.html
@@ -1,4 +1,5 @@
 <script src="js/three.min.js"></script>
+<script src="/socket.io/socket.io.js"></script>
 <script src="js/underscore-min.js"></script>
 <script src="js/backbone-min.js"></script>
 <script src="js/jquery-2.0.3.min.js"></script>
