updated client view

--- a/pub/views/client.html
+++ b/pub/views/client.html
@@ -1,7 +1,2 @@
-<script src="js/three.min.js"></script>
-<script src="/socket.io/socket.io.js"></script>
-<script src="js/underscore-min.js"></script>
-<script src="js/backbone-min.js"></script>
-<script src="js/jquery-2.0.3.min.js"></script>
-<script src="js/client.js"></script>
+<script data-main="js/init" src="js/lib/require.js"></script>
 <title> u want sum gam?</title>
